test/files/neg/unreachablechar.check
unreachablechar.scala:4: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
    case _ => println("stuff");
         ^
unreachablechar.scala:5: warning: unreachable code due to variable pattern on line 4
    case 'f' => println("not stuff?");
                       ^
unreachablechar.scala:5: warning: unreachable code
    case 'f' => println("not stuff?");
                       ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
